Fix  → added max height and overflow to client--logos gray square

--- a/css/app.css
+++ b/css/app.css
@@ -481,6 +481,8 @@ width: 100%;
 
 .square .col-12{
     padding: 0 50px;
+    max-height: 100%;
+    overflow: hidden;
 }
 
 
